[package]
name = "locho"
version = "0.1.0"
edition = "2021"
authors = ["Quang Tran <m@chop.dev>"]
description = "HTTP reverse proxy over an iroh tunnel"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
fs2 = "0.4"
hex = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
iroh = "0.35"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = { version = "0.5.10", features = ["all"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
